packages/umi-plugin-ui/src/plugins/dashboard/ui/index.module.less
@import '../../../../node_modules/umi-ui-theme/dark.less';

.container {
  padding: 20px;
  height: 100%;
  overflow: auto;
  &-row {
    margin-left: -8px;
    margin-right: -8px;
  }
  &-col {
    padding-left: 8px;
    padding-right: 8px;
  }
  .card {
    margin-bottom: 16px;
    // min-width: 282px;
  }
}

.close {
  transition: all 0.3s;
  &:hover {
    color: fade(#fff, 85);
  }
}

.content-row {
  flex-wrap: wrap;
  text-align: center;
}

.content-col {
  border-right: 1px solid @border-color-split;
  &:last-child {
    border-right: 1px solid transparent;
  }
  a {
    color: @text-color;
  }
}

.card {
  :global {
    .ant-card-head {
      border-bottom: none;
    }
  }
  &-action {
    :global {
      .ant-card-head-title {
        padding: 26px 0;
      }
      .ant-card-body {
        border-top: 1px solid #1d1d26;
        padding: 0;
        color: fade(#fff, 65);
        transition: all 0.3s;
        & > div {
          padding: 16px 0;
        }
      }
    }
  }
}

.main {
  flex-wrap: nowrap;
  .avatar {
    width: 48px;
    height: 48px;
    font-size: 24px;
    line-height: 48px;
  }
  p {
    font-size: 12px;
  }
}

.icon {
  width: 48px;
  height: 48px;
  border-radius: 3px;
  margin-right: 12px;
  h4 {
    font-size: 14px;
    color: rgba(255, 255, 255, 0.85);
    line-height: 22px;
    margin-bottom: 4px;
  }
  p {
    font-size: 12px;
    color: rgba(255, 255, 255, 0.45);
    line-height: 20px;
  }
  // &.build {
  //   background: url('https://gw.alipayobjects.com/zos/basement_prod/6000d285-334d-4513-a405-2d9f890f56e9.svg');
  //   background-size: contain;
  //   background-position: center;
  // }
  // &.dev {
  //   background: url('https://gw.alipayobjects.com/zos/basement_prod/6000d285-334d-4513-a405-2d9f890f56e9.svg');
  //   background-size: contain;
  //   background-position: center;
  // }
}

.future {
  margin: 26px auto;
  text-align: center;
  div {
    margin-bottom: 7px;
    font-size: 16px;
  }
  p {
    font-size: 14px;
    color: rgba(255, 255, 255, 0.65);
    line-height: 22px;
  }
}

.welcome {
  :global {
    .ant-card-body {
      padding: 24px;
      h2 {
        font-size: 24px;
        color: #fff;
        line-height: 32px;
        margin-bottom: 24px;
      }
      p {
        font-size: 24px;
        color: #fff;
        line-height: 32px;
        margin-bottom: 72px;
      }
      div {
        font-size: 14px;
        color: rgba(255, 252, 252, 0.65);
        line-height: 22px;
      }
    }
  }
}

:global(.isMini) {
  :global {
    .ant-card-body {
      h2 {
        margin-bottom: 4px;
        font-size: 16px;
        line-height: 24px;
      }
      p {
        margin-bottom: 8px;
        font-size: 16px;
        line-height: 24px;
      }
      div {
        font-size: 12px;
      }
    }
  }
}

